# manulab_resources

./: README.md
kuka_kr16_description/: CMakeLists.txt  README.md  package.xml
kuka_kr16_description/urdf/: kr16.urdf
kuka_kr16_moveit_config/: CMakeLists.txt  package.xml
kuka_kr16_moveit_config/config/: fake_controllers.yaml  kinematics.yaml  kr16.ros2_control.xacro  kr16.srdf  kr16_arm.xacro  (+6 more)
kuka_kr6r900sixx_description/: CMakeLists.txt  README.md  package.xml
kuka_kr6r900sixx_description/urdf/: kr6r900sixx.urdf
kuka_kr6r900sixx_moveit_config/: CMakeLists.txt  package.xml
kuka_kr6r900sixx_moveit_config/config/: chomp_planning.yaml  fake_controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  kr6r900sixx.ros2_control.xacro  kr6r900sixx.srdf  kr6r900sixx.urdf.xacro  kr6r900sixx_arm.srdf.xacro  kr6r900sixx_arm.xacro  kr6r900sixx_controllers.yaml  kr6r900sixx_ros_controllers.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml
kuka_kr6r900sixx_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo.launch.py  demo_chomp.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  fanuc_moveit_controller_manager.launch.xml  gazebo.launch  kr6r900sixx_moveit.launch  kr6r900sixx_moveit_controller_manager.launch.xml  lerp_planning_pipeline.launch.xml  move_group.launch  moveit.rviz  moveit_rviz.launch  moveit_rviz.launch.py  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  run_benchmark_trajopt.launch  sensor_manager.launch.xml  setup_assistant.launch  stomp_planning_pipeline.launch.xml  test_environment.launch  trajectory_execution.launch.xml  trajopt_planning_pipeline.launch.xml  warehouse.launch
kuka_lbr_iiwa_description/: CMakeLists.txt  README.md  package.xml
motoman_gp25_description/: CMakeLists.txt  README.md  package.xml
motoman_gp25_description/config/: joint_names_gp25.yaml  view_robot.rviz
motoman_gp25_description/launch/: view_robot.launch.py
motoman_gp25_description/urdf/: gp25.xacro  gp25_macro.xacro
(+30 files in other folders)
