<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manulab_resources_kuka_kr6r900sixx_moveit_config</name>
  <version>0.0.0</version>
  <description> MoveIt Resources for: KUKA KR6 R900 Sixx.  </description>
  <maintainer email="lars.tingelstad@ntnu.no">Lars Tingelstad</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>manulab_resources_kuka_kr6r900sixx_description</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
