<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>motoman_gp25_description</name>
  <version>0.0.0</version>
  <description>Robot description of the Yaskawa MOTOMAN GP25 robots in Manulab</description>
  <maintainer email="lars.tingelstad@ntnu.no"></maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>